@@ -1,3 +1,9 @@
+2014-01-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR other/58712
+	* builtins.c (determine_block_size): Initialize *probable_max_size
+	even if len_rtx is CONST_INT.
+
 2014-01-14  Andrew Pinski  <apinski@cavium.com>
 
 	* config/aarch64/aarch64-protos.h (tune_params): Add issue_rate.
